; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/isa/gus/extr_gus_timer.c_snd_gf1_timer1_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/isa/gus/extr_gus_timer.c_snd_gf1_timer1_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_timer = type { i32 }
%struct.snd_gus_card = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@SNDRV_GF1_GB_SOUND_BLASTER_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_timer*)* @snd_gf1_timer1_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_gf1_timer1_stop(%struct.snd_timer* %0) #0 {
  %2 = alloca %struct.snd_timer*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8, align 1
  %5 = alloca %struct.snd_gus_card*, align 8
  store %struct.snd_timer* %0, %struct.snd_timer** %2, align 8
  %6 = load %struct.snd_timer*, %struct.snd_timer** %2, align 8
  %7 = call %struct.snd_gus_card* @snd_timer_chip(%struct.snd_timer* %6)
  store %struct.snd_gus_card* %7, %struct.snd_gus_card** %5, align 8
  %8 = load %struct.snd_gus_card*, %struct.snd_gus_card** %5, align 8
  %9 = getelementptr inbounds %struct.snd_gus_card, %struct.snd_gus_card* %8, i32 0, i32 0
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load %struct.snd_gus_card*, %struct.snd_gus_card** %5, align 8
  %13 = getelementptr inbounds %struct.snd_gus_card, %struct.snd_gus_card* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, -5
  store i32 %16, i32* %14, align 4
  %17 = trunc i32 %16 to i8
  store i8 %17, i8* %4, align 1
  %18 = load %struct.snd_gus_card*, %struct.snd_gus_card** %5, align 8
  %19 = load i32, i32* @SNDRV_GF1_GB_SOUND_BLASTER_CONTROL, align 4
  %20 = load i8, i8* %4, align 1
  %21 = call i32 @snd_gf1_write8(%struct.snd_gus_card* %18, i32 %19, i8 zeroext %20)
  %22 = load %struct.snd_gus_card*, %struct.snd_gus_card** %5, align 8
  %23 = getelementptr inbounds %struct.snd_gus_card, %struct.snd_gus_card* %22, i32 0, i32 0
  %24 = load i64, i64* %3, align 8
  %25 = call i32 @spin_unlock_irqrestore(i32* %23, i64 %24)
  ret i32 0
}

declare dso_local %struct.snd_gus_card* @snd_timer_chip(%struct.snd_timer*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @snd_gf1_write8(%struct.snd_gus_card*, i32, i8 zeroext) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
